Added errorStrategy = 'ignore' to MAKEREFERENCE process

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -121,6 +121,7 @@ process {
     }
 
     withName: MAKE_REFERENCE {
+        errorStrategy = 'ignore'
         publishDir = [
             path: { "${params.outdir}/make_reference" },
             mode: params.publish_dir_mode,
