Set errorStrategy = 'ignore' for PROKKA

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -168,6 +168,7 @@ process {
     }
 
     withName: PROKKA {
+        errorStrategy = 'ignore'
         publishDir = [
             path: { "${params.outdir}/prokka" },
             mode: params.publish_dir_mode,
