--- a/conf/modules.config
+++ b/conf/modules.config
@@ -176,6 +176,7 @@ process {
     }
 
 	withName: SUMMARY {
+        errorStrategy = 'ignore'
 		publishDir =[
 			path: { "${params.outdir}/summary" },
 			mode: params.publish_dir_mode,
