Change the sort_bowtie2_bam = false

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,7 +27,7 @@ params {
     
     // Alignment
     save_bowtie2_unaligned     = false
-    sort_bowtie2_bam           = true
+    sort_bowtie2_bam           = false
 
     // References
     genbank_ref                = null
