REplace trimming method with BBDUK.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,6 +42,24 @@ process {
         ]
     }
 
+    withName: BBDUK_R {
+        ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo overwrite=t'
+        publishDir = [
+            path: { "${params.outdir}/bbduk_r" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{gz,log}"
+        ]
+    }
+
+    withName: BBDUK_L {
+        ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo overwrite=t'
+        publishDir = [
+            path: { "${params.outdir}/bbduk_l" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{gz,log}"
+        ]
+    }      
+
     withName: BOWTIE2_BUILD_REFERENCE {
         publishDir = [
             path: { "${params.outdir}/bowtie2_ref" },
@@ -194,7 +212,8 @@ process {
     
     if (!params.skip_fastqc) {
         process {
-            withName: '.*:FASTQ_TRIM_FASTP_FASTQC:FASTQC_RAW' {
+            //withName: '.*:FASTQ_TRIM_FASTP_FASTQC:FASTQC_RAW' {
+            withName: 'FASTQC_RAW' {
                 ext.args = '--quiet'
                 publishDir = [
                     path: { "${params.outdir}/fastqc/raw" },
@@ -202,9 +221,18 @@ process {
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
-        }
-    }
 
+            withName: 'FASTQC_TRIMMED' {
+                ext.args = '--quiet'
+                publishDir = [
+                    path: { "${params.outdir}/fastqc/trim" },
+                    mode: params.publish_dir_mode,
+                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                ]
+            }
+        }        
+    }
+    /*
     if (!params.skip_fastp) {
         process {
             withName: '.*:FASTQ_TRIM_FASTP_FASTQC:FASTP' {
@@ -243,6 +271,7 @@ process {
             }
         }
     }
+    */
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
