--- a/conf/modules.config
+++ b/conf/modules.config
@@ -43,7 +43,7 @@ process {
     }
 
     withName: BBDUK_R {
-        ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo overwrite=t'
+        ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_r" },
             mode: params.publish_dir_mode,
@@ -52,7 +52,7 @@ process {
     }
 
     withName: BBDUK_L {
-        ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo overwrite=t'
+        ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_l" },
             mode: params.publish_dir_mode,
@@ -215,7 +215,7 @@ process {
             withName: 'FASTQC_RAW' {
                 ext.args = '--quiet'
                 publishDir = [
-                    path: { "${params.outdir}/fastqc/raw" },
+                    path: { "${params.outdir}/fastqc_raw" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
@@ -224,7 +224,7 @@ process {
             withName: 'FASTQC_TRIMMED' {
                 ext.args = '--quiet'
                 publishDir = [
-                    path: { "${params.outdir}/fastqc/trim" },
+                    path: { "${params.outdir}/fastqc_trim" },
                     mode: params.publish_dir_mode,
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
