--- a/conf/modules.config
+++ b/conf/modules.config
@@ -217,7 +217,7 @@ process {
                 publishDir = [
                     path: { "${params.outdir}/fastqc_raw" },
                     mode: params.publish_dir_mode,
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                    pattern: "*.{zip,html}"                    
                 ]
             }
 
@@ -226,7 +226,7 @@ process {
                 publishDir = [
                     path: { "${params.outdir}/fastqc_trim" },
                     mode: params.publish_dir_mode,
-                    saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+                    pattern: "*.{zip,html}" 
                 ]
             }
         }        
