--- a/conf/modules.config
+++ b/conf/modules.config
@@ -213,18 +213,20 @@ process {
     if (!params.skip_fastqc) {
         process {
             withName: 'FASTQC_RAW' {
+                ext.prefix = { "${meta.id}.raw." }
                 ext.args = '--quiet'
                 publishDir = [
-                    path: { "${params.outdir}/fastqc_raw" },
+                    path: { "${params.outdir}/fastqc" },
                     mode: params.publish_dir_mode,
                     pattern: "*.{zip,html}"                    
                 ]
             }
 
             withName: 'FASTQC_TRIMMED' {
+                ext.prefix = { "${meta.id}.trim." }
                 ext.args = '--quiet'
                 publishDir = [
-                    path: { "${params.outdir}/fastqc_trim" },
+                    path: { "${params.outdir}/fastqc" },
                     mode: params.publish_dir_mode,
                     pattern: "*.{zip,html}" 
                 ]
