--- a/conf/modules.config
+++ b/conf/modules.config
@@ -43,6 +43,7 @@ process {
     }
 
     withName: BBDUK_R {
+        ext.prefix = { "${meta.id.trimmed_l}" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_r" },
@@ -52,6 +53,7 @@ process {
     }
 
     withName: BBDUK_L {
+        ext.prefix = { "${meta.id.trimmed_lr}" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_l" },
@@ -210,28 +212,24 @@ process {
 		]
 	}
     
-    if (!params.skip_fastqc) {
-        process {
-            withName: 'FASTQC_RAW' {
-                ext.prefix = { "${meta.id}.raw." }
-                ext.args = '--quiet'
-                publishDir = [
-                    path: { "${params.outdir}/fastqc" },
-                    mode: params.publish_dir_mode,
-                    pattern: "*.{zip,html}"                    
-                ]
-            }
+    withName: 'FASTQC_RAW' {
+        ext.prefix = { "${meta.id}.raw." }
+        ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/fastqc" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{zip,html}"                    
+        ]
+    }
 
-            withName: 'FASTQC_TRIMMED' {
-                ext.prefix = { "${meta.id}.trim." }
-                ext.args = '--quiet'
-                publishDir = [
-                    path: { "${params.outdir}/fastqc" },
-                    mode: params.publish_dir_mode,
-                    pattern: "*.{zip,html}" 
-                ]
-            }
-        }        
+    withName: 'FASTQC_TRIMMED' {
+        ext.prefix = { "${meta.id}.trim." }
+        ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/fastqc" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{zip,html}" 
+        ]
     }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
