--- a/conf/modules.config
+++ b/conf/modules.config
@@ -11,7 +11,6 @@
 */
 
 process {
-
     publishDir = [
         path: { "${params.outdir}/${task.process.tokenize(':')[-1].tokenize('_')[0].toLowerCase()}" },
         mode: params.publish_dir_mode,
@@ -41,6 +40,26 @@ process {
             pattern: "*.faa"
         ]
     }
+
+    withName: FASTQC_RAW {
+        ext.prefix = { "${meta.id}.raw." }
+        ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/fastqc" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{zip,html}"                    
+        ]
+    }
+
+    withName: FASTQC_TRIMMED {
+        ext.prefix = { "${meta.id}.trim." }
+        ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/fastqc" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{zip,html}" 
+        ]
+    }    
 
     withName: BBDUK_R {
         ext.prefix = { "${meta.id.trimmed_l}" }
@@ -211,26 +230,6 @@ process {
 			pattern: "*summary.tsv"
 		]
 	}
-    
-    withName: 'FASTQC_RAW' {
-        ext.prefix = { "${meta.id}.raw." }
-        ext.args = '--quiet'
-        publishDir = [
-            path: { "${params.outdir}/fastqc" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{zip,html}"                    
-        ]
-    }
-
-    withName: 'FASTQC_TRIMMED' {
-        ext.prefix = { "${meta.id}.trim." }
-        ext.args = '--quiet'
-        publishDir = [
-            path: { "${params.outdir}/fastqc" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{zip,html}" 
-        ]
-    }
 
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
