--- a/conf/modules.config
+++ b/conf/modules.config
@@ -62,7 +62,7 @@ process {
     }    
 
     withName: BBDUK_R {
-        ext.prefix = { "${meta.id.trimmed_l}" }
+        ext.prefix = { "${meta.id}.trimmed_l" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_r" },
@@ -72,7 +72,7 @@ process {
     }
 
     withName: BBDUK_L {
-        ext.prefix = { "${meta.id.trimmed_lr}" }
+        ext.prefix = { "${meta.id}.trimmed_lr" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_l" },
