--- a/conf/modules.config
+++ b/conf/modules.config
@@ -42,7 +42,7 @@ process {
     }
 
     withName: FASTQC_RAW {
-        ext.prefix = { "${meta.id}.raw." }
+        ext.prefix = { "${meta.id}.raw" }
         ext.args = '--quiet'
         publishDir = [
             path: { "${params.outdir}/fastqc" },
@@ -52,7 +52,7 @@ process {
     }
 
     withName: FASTQC_TRIMMED {
-        ext.prefix = { "${meta.id}.trim." }
+        ext.prefix = { "${meta.id}.trim" }
         ext.args = '--quiet'
         publishDir = [
             path: { "${params.outdir}/fastqc" },
@@ -62,7 +62,7 @@ process {
     }    
 
     withName: BBDUK_R {
-        ext.prefix = { "${meta.id}.trimmed_l" }
+        ext.prefix = { "${meta.id}.trimmed_r" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=r mink=4 hdist=2 tpe tbo'
         publishDir = [
             path: { "${params.outdir}/bbduk_r" },
