--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,10 @@ params {
     // Input options
     input                      = null    
     
+    // Seqtk
+    sub_sample                 = false
+    sample_size                = 100000
+
     // FastQC/fastp options
     save_trimmed_fail	       = false
     save_merged		           = false
