Added bbduk quality trimming.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -72,6 +72,16 @@ process {
     }
 
     withName: BBDUK_L {
+        ext.prefix = { "${meta.id}.preprocessed" }
+        ext.args = 'qtrim=rl trimq=20 maq=10 minlen=20'
+        publishDir = [
+            path: { "${params.outdir}/bbduk_q" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{gz,log}"
+        ]
+    }     
+
+    withName: BBDUK_Q {
         ext.prefix = { "${meta.id}.trimmed_lr" }
         ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
         publishDir = [
@@ -79,7 +89,7 @@ process {
             mode: params.publish_dir_mode,
             pattern: "*.{gz,log}"
         ]
-    }      
+    }
 
     withName: BOWTIE2_BUILD_REFERENCE {
         publishDir = [
