--- a/conf/modules.config
+++ b/conf/modules.config
@@ -72,20 +72,20 @@ process {
     }
 
     withName: BBDUK_L {
-        ext.prefix = { "${meta.id}.preprocessed" }
-        ext.args = 'qtrim=rl trimq=20 maq=10 minlen=20'
+        ext.prefix = { "${meta.id}.trimmed_lr" }
+        ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
         publishDir = [
-            path: { "${params.outdir}/bbduk_q" },
+            path: { "${params.outdir}/bbduk_lr" },
             mode: params.publish_dir_mode,
             pattern: "*.{gz,log}"
         ]
     }     
 
     withName: BBDUK_Q {
-        ext.prefix = { "${meta.id}.trimmed_lr" }
-        ext.args = 'ref=adapters,artifacts k=21 ktrim=l mink=4 hdist=2 tpe tbo'
+        ext.prefix = { "${meta.id}.preprocessed" }
+        ext.args = 'qtrim=rl trimq=20 maq=10 minlen=20'
         publishDir = [
-            path: { "${params.outdir}/bbduk_l" },
+            path: { "${params.outdir}/bbduk_q" },
             mode: params.publish_dir_mode,
             pattern: "*.{gz,log}"
         ]
