Replace new ref mapping and consensus generation with bwa and ivar.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -178,6 +178,23 @@ process {
         ]
     }
 
+    withName: BWA_MEM_ALIGN_NEW_REF {
+        publishDir = [
+            path: { "${params.outdir}/align_new_ref" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{bam,txt}"
+        ]
+    }    
+
+    withName: IVAR_CONSENSUS {
+        publishDir = [
+            path: { "${params.outdir}/final_consensus" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{fasta,bed}"
+        ]
+    }   
+
+    /*
     withName: BOWTIE2_BUILD_NEW_REFERENCE {
         publishDir = [
             path: { "${params.outdir}/bowtie2_new_ref" },
@@ -215,6 +232,7 @@ process {
             pattern: "*{final_consensus.fasta,.csv}"
         ]
     }
+    */
 
     withName: PROKKA {
         errorStrategy = 'ignore'
