--- a/conf/modules.config
+++ b/conf/modules.config
@@ -179,6 +179,7 @@ process {
     }
 
     withName: BWA_MEM_ALIGN_NEW_REF {
+        ext.prefix = { "${meta.id}_new_ref" }
         publishDir = [
             path: { "${params.outdir}/align_new_ref" },
             mode: params.publish_dir_mode,
@@ -193,6 +194,15 @@ process {
             pattern: "*.{fasta,bed}"
         ]
     }   
+
+    withName: BWA_MEM_ALIGN_FINAL_CONSENSUS {
+        ext.prefix = { "${meta.id}_final_consensus" }
+        publishDir = [
+            path: { "${params.outdir}/align_final_consensus" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{bam,txt}"
+        ]
+    }    
 
     /*
     withName: BOWTIE2_BUILD_NEW_REFERENCE {
