--- a/conf/modules.config
+++ b/conf/modules.config
@@ -129,7 +129,7 @@ process {
     }
 
     withName: SPADES {
-        ext.args = '--careful'
+        ext.args = '--meta'
         publishDir = [
             path: { "${params.outdir}/spades" },
             mode: params.publish_dir_mode,
