Region map approach to build reference.

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,8 @@ params {
     // Scripts
     make_reference             = "${projectDir}/bin/make_reference.R"
     generate_consensus         = "${projectDir}/bin/generate_consensus.R"
+    configure_reference        = "${projectDir}/bin/configure_reference.py"
+    maf_convert                = "${projectDir}/bin/maf-convert.py"
     
     // Alignment
     save_bowtie2_unaligned     = false
@@ -35,6 +37,8 @@ params {
 
     // References
     genbank_ref                = null
+    bowtie2_host_index         = null
+    region_map                 = null
 
     // MultiQC options
     multiqc_config             = null
