Cleaned up documentation and file names.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -191,6 +191,7 @@ process {
     withName: BOWTIE2_ALIGN_FINAL_REFERENCE {
         ext.args = '--local --very-sensitive-local --seed 1'
         ext.args2 = '-F4 -bhS'
+        ext.prefix = { "${meta.id}_reads_map_to_${meta.id}_ivar_final_consensus" }        
         publishDir = [
             path: { "${params.outdir}/align_final_ref" },
             mode: params.publish_dir_mode,
