Added errorStrategy = 'ignore' to mugsy in modules.config.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -138,6 +138,7 @@ process {
     }   
 
     withName: MUGSY {
+        errorStrategy = 'ignore'
         publishDir = [
             path: { "${params.outdir}/mugsy" },
             mode: params.publish_dir_mode,
