Added --use_sealer to enable abyss-sealer gap filling.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -137,6 +137,14 @@ process {
         ]
     }   
 
+    withName: ABYSS {
+        publishDir = [
+            path: { "${params.outdir}/abyss" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{fa,txt}"
+        ]
+    }       
+
     withName: MUGSY {
         errorStrategy = 'ignore'
         publishDir = [
