--- a/nextflow.config
+++ b/nextflow.config
@@ -40,6 +40,9 @@ params {
     bowtie2_host_index         = null
     region_map                 = null
 
+    // Gap Filling
+    use_sealer                 = false
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
