Added ivar variants and formatting

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,17 +29,9 @@ process {
         publishDir = [
             path: { "${params.outdir}/genbank_to_fasta" },
             mode: params.publish_dir_mode,
-            pattern: "*.fasta"
+            pattern: "*.{fasta,gff}"
         ]
     }  
-
-    withName: PROKKA_GENBANK_TO_FASTA_DB {
-        publishDir = [
-            path: { "${params.outdir}/prokka_genbank_to_fasta_db" },
-            mode: params.publish_dir_mode,
-            pattern: "*.faa"
-        ]
-    }
 
     withName: FASTQC_RAW {
         ext.prefix = { "${meta.id}.raw" }
@@ -217,6 +209,22 @@ process {
         ]
     }   
 
+    withName: IVAR_VARIANTS {
+        publishDir = [
+            path: { "${params.outdir}/variants" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{tsv}"
+        ]
+    }
+
+    withName: FORMAT_VARIANTS {
+        publishDir = [
+            path: { "${params.outdir}/variants" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{tsv}"
+        ]
+    }    
+
     withName: BWA_MEM_ALIGN_FINAL_CONSENSUS {
         ext.prefix = { "${meta.id}_final_consensus" }
         publishDir = [
@@ -265,14 +273,6 @@ process {
         ]
     }
     */
-
-    withName: PROKKA {
-        errorStrategy = 'ignore'
-        publishDir = [
-            path: { "${params.outdir}/prokka" },
-            mode: params.publish_dir_mode,
-        ]        
-    }
 
 	withName: SUMMARY {
         errorStrategy = 'ignore'
