--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,8 @@ params {
     generate_consensus         = "${projectDir}/bin/generate_consensus.R"
     configure_reference        = "${projectDir}/bin/configure_reference.py"
     maf_convert                = "${projectDir}/bin/maf-convert.py"
+    convert_genbank_to_gff     = "${projectDir}/bin/convert_genbank_to_gff3.py"
+    edit_ivar_variants         = "${projectDir}/bin/edit_ivar_variants.py"
     
     // Alignment
     save_bowtie2_unaligned     = false
@@ -39,6 +41,11 @@ params {
     genbank_ref                = null
     bowtie2_host_index         = null
     region_map                 = null
+
+    // ivar
+	ivar_variants_q            = 20
+	ivar_variants_t            = 0.01
+	ivar_variants_m            = 10
 
     // MultiQC options
     multiqc_config             = null
