Added errorStrategy ignore to SPADES in modules.config

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -121,6 +121,7 @@ process {
     }
 
     withName: SPADES {
+        errorStrategy = 'ignore'
         ext.args = '--meta'
         publishDir = [
             path: { "${params.outdir}/spades" },
