Flags for human sequence removal.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -97,8 +97,28 @@ process {
         ]
     }    
 
+    withName: BOWTIE2_ALIGN_REFERENCE {
+        ext.args = '--no-unal --local --very-sensitive-local --seed 1'
+        ext.args2 = '-F4 -bhS'
+        ext.prefix = { "${meta.id}.sorted" }        
+        publishDir = [
+            path: { "${params.outdir}/bowtie2" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{sorted.bam,log}"
+        ]        
+    }
+
+    withName: SRA_SCRUB_HUMAN {
+        publishDir = [
+            path: { "${params.outdir}/human_scrubber" },
+            mode: params.publish_dir_mode,
+            pattern: "*scrubbed*.gz"
+        ]
+    }        
+
+    /*
     withName: '.*:FASTQ_ALIGN_BOWTIE2:BOWTIE2_ALIGN' {
-        ext.args = '--local --very-sensitive-local --seed 1'
+        ext.args = '--no-unal --local --very-sensitive-local --seed 1'
         ext.args2 = '-F4 -bhS'
     }
 
@@ -119,6 +139,7 @@ process {
             pattern: "*.{stats,flagstat,idxstats}"
         ]
     }
+    */
 
     withName: SPADES {
         errorStrategy = 'ignore'
