--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,6 @@ params {
     generate_consensus         = "${projectDir}/bin/generate_consensus.R"
     configure_reference        = "${projectDir}/bin/configure_reference.py"
     maf_convert                = "${projectDir}/bin/maf-convert.py"
-    convert_genbank_to_gff     = "${projectDir}/bin/convert_genbank_to_gff3.py"
     edit_ivar_variants         = "${projectDir}/bin/edit_ivar_variants.py"
     
     // Alignment
@@ -41,6 +40,7 @@ params {
     genbank_ref                = null
     bowtie2_host_index         = null
     region_map                 = null
+    scrub_human                = false
 
     // ivar
 	ivar_variants_q            = 20
