Fixed quote error in nextflow.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -42,6 +42,9 @@ params {
     region_map                 = null
     scrub_human                = false
 
+    // SPAdes
+    spades_flag                = "meta"
+
     // ivar
 	ivar_variants_q            = 20
 	ivar_variants_t            = 0.01
