Added Unicycler module and additional spades_flag to use unicycler instead of spades.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -150,6 +150,15 @@ process {
         ]
     }   
 
+    withName: UNICYCLER {
+        errorStrategy = 'ignore'
+        publishDir = [
+            path: { "${params.outdir}/unicycler" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{gz,log}"
+        ]
+    }   
+
     withName: MUGSY {
         errorStrategy = 'ignore'
         publishDir = [
