More changes to extract_build_reference.py and get_best_reference.nf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -180,7 +180,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/best_reference" },
             mode: params.publish_dir_mode,
-            pattern: "{*.json,region_*.fasta,*.gb,*.log,*.stats}"
+            pattern: "{*.json,region_*.fasta,*.gb,*.log}"
         ]
     }   
 
