Add hsv2 specific reference files and update ivar_variants.nf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -79,7 +79,7 @@ process {
 
     withName: BBDUK_Q {
         ext.prefix = { "${meta.id}.preprocessed" }
-        ext.args = 'qtrim=rl trimq=20 maq=10 minlen=50 trimpolyg=24'
+        ext.args = 'qtrim=rl trimq=20 maq=10 minlen=50 trimpolyg=24 trimpolyc=24'
         publishDir = [
             path: { "${params.outdir}/bbduk_q" },
             mode: params.publish_dir_mode,
