Added indel realignment, updated iVar to use new version with -G and updated variant formatting.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -229,7 +229,38 @@ process {
             mode: params.publish_dir_mode,
             pattern: "*.{bam,txt}"
         ]
+    }
+
+    withName: PICARD_ADDORREPLACEREADGROUPS {
+        ext.args = { "--SORT_ORDER coordinate --RGID foo --RGLB bar --RGPL illumina --RGPU unit1 --RGSM ${meta.id} --CREATE_INDEX true" }
+        ext.prefix = { "${meta.id}_rg" }        
+        publishDir = [
+            path: { "${params.outdir}/addorreplacereadgroups" },
+            mode: 'copy',
+            pattern: "*{rg.bam}"
+        ]        
     }    
+
+    withName: 'GATK_REALIGNERTARGETCREATOR' {
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelintervals" },
+				mode: 'copy',
+				pattern: "*.intervals"
+			]
+		]
+    }
+
+	withName: 'GATK_INDELREALIGNER' {
+		ext.args = { "-maxReads 500000" }
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelrealigned" },
+				mode: 'copy',
+				pattern: "*.{bam,bai}"
+			]
+		]
+    }	        
 
     withName: IVAR_CONSENSUS {
         publishDir = [
