Added indel realignment.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -25,6 +25,14 @@ process {
         ]
     }
 
+    withName: BBMAP_REPAIR {
+        publishDir = [
+            path: { "${params.outdir}/bbmap_repair" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{gz,log}"
+        ]
+    }
+
     withName: GENBANK_TO_FASTA {
         publishDir = [
             path: { "${params.outdir}/genbank_to_fasta" },
@@ -37,7 +45,7 @@ process {
         ext.prefix = { "${meta.id}.raw" }
         ext.args = '--quiet'
         publishDir = [
-            path: { "${params.outdir}/fastqc" },
+            path: { "${params.outdir}/fastqc/raw" },
             mode: params.publish_dir_mode,
             pattern: "*.{zip,html}"                    
         ]
@@ -47,7 +55,7 @@ process {
         ext.prefix = { "${meta.id}.trim" }
         ext.args = '--quiet'
         publishDir = [
-            path: { "${params.outdir}/fastqc" },
+            path: { "${params.outdir}/fastqc/trimmed" },
             mode: params.publish_dir_mode,
             pattern: "*.{zip,html}" 
         ]
@@ -92,14 +100,7 @@ process {
             path: { "${params.outdir}/bowtie2_ref" },
             mode: params.publish_dir_mode
         ]
-    }    
-
-    withName: BWA_INDEX {
-        publishDir = [
-            path: { "${params.outdir}/bwa_index_ref" },
-            mode: params.publish_dir_mode
-        ]
-    }    
+    }     
 
     withName: BOWTIE2_ALIGN_REFERENCE {
         ext.args = '--no-unal --local --very-sensitive-local --seed 1'
@@ -112,24 +113,67 @@ process {
         ]        
     }
 
-    withName: BOWTIE2_ALIGN_HOST_REFERENCE {
-        ext.args = '--no-unal --local --very-sensitive-local --seed 1'
-        ext.args2 = '-F4 -bhS'
-        ext.prefix = { "${meta.id}.sorted" }        
+    withName: PICARD_ADDORREPLACEREADGROUPS {
+        ext.args = { "--SORT_ORDER coordinate --RGID foo --RGLB bar --RGPL illumina --RGPU unit1 --RGSM ${meta.id} --CREATE_INDEX true" }
+        ext.prefix = { "${meta.id}_rg" }        
         publishDir = [
-            path: { "${params.outdir}/host_removed" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{fastq.gz,log}"
+            path: { "${params.outdir}/indelrealign/ref/addorreplacereadgroups" },
+            mode: 'copy',
+            pattern: "*{rg.bam}"
         ]        
+    }    
+
+    withName: 'GATK_REALIGNERTARGETCREATOR' {
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelrealign/ref/indelintervals" },
+				mode: 'copy',
+				pattern: "*.intervals"
+			]
+		]
     }
 
-    withName: SRA_SCRUB_HUMAN {
+	withName: 'GATK_INDELREALIGNER' {
+		ext.args = { "-maxReads 500000" }
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelrealigned/ref/bam" },
+				mode: 'copy',
+				pattern: "*.{bam,bai}"
+			]
+		]
+    }	        
+
+    withName: PICARD_ADDORREPLACEREADGROUPS_NEW_REF {
+        ext.args = { "--SORT_ORDER coordinate --RGID foo --RGLB bar --RGPL illumina --RGPU unit1 --RGSM ${meta.id} --CREATE_INDEX true" }
+        ext.prefix = { "${meta.id}_new_ref_rg" }        
         publishDir = [
-            path: { "${params.outdir}/human_scrubber" },
-            mode: params.publish_dir_mode,
-            pattern: "*scrubbed*.gz"
-        ]
-    }        
+            path: { "${params.outdir}/indelrealigned/new_ref/addorreplacereadgroups" },
+            mode: 'copy',
+            pattern: "*{rg.bam}"
+        ]        
+    }    
+
+    withName: 'GATK_REALIGNERTARGETCREATOR_NEW_REF' {
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelrealigned/new_ref/indelintervals" },
+				mode: 'copy',
+				pattern: "*.intervals"
+			]
+		]
+    }
+
+	withName: 'GATK_INDELREALIGNER_NEW_REF' {
+		ext.args = { "-maxReads 500000" }
+        publishDir = [ 
+			[
+				path: { "${params.outdir}/indelrealigned/new_ref/bam" },
+				mode: 'copy',
+				pattern: "*.{bam,bai}"
+			]
+		]
+    }	
 
     withName: BBMAP_DEDUPE {
         publishDir = [
@@ -149,8 +193,8 @@ process {
     }   
 
     withName: UNICYCLER {
-        ext.args = '--mode bold'
         errorStrategy = 'ignore'
+        ext.args = '--mode bold'
         publishDir = [
             path: { "${params.outdir}/unicycler" },
             mode: params.publish_dir_mode,
@@ -174,40 +218,7 @@ process {
             mode: params.publish_dir_mode,
             pattern: "*{.maf,.log,.sam,.bam,*.fasta}"
         ]
-    }
-
-    withName: LAST_MAFCONVERT {
-        ext.prefix = { "${meta.id}_aligned_scaffolds_nonzero_ref" }
-        ext.args = '-d'
-    }      
-
-    withName: SAMTOOLS_VIEW_ALIGNED {
-        ext.prefix = { "${meta.id}_aligned_scaffolds_nonzero_ref" }
-        ext.args = '-bS --output-fmt bam'
-        publishDir = [
-            path: { "${params.outdir}/samtools_scaffold_view" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{bam}"
-        ]
-    }   
-
-    withName: SAMTOOLS_SORT_ALIGNED {
-        ext.prefix = { "${meta.id}_aligned_scaffolds_nonzero_ref_sorted" }
-        publishDir = [
-            path: { "${params.outdir}/samtools_scaffold_sort" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{bam}"
-        ]
-    }
-
-    withName: MAKE_REFERENCE {
-        errorStrategy = 'ignore'
-        publishDir = [
-            path: { "${params.outdir}/make_reference" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{fasta}"
-        ]
-    }
+    }  
 
     withName: BOWTIE2_ALIGN_NEW_REFERENCE {
         ext.args = '--local --very-sensitive-local --seed 1'
@@ -229,15 +240,6 @@ process {
             pattern: "*.{bam,txt}"
         ]        
     }
-
-    withName: BWA_MEM_ALIGN_NEW_REF {
-        ext.prefix = { "${meta.id}_new_ref" }
-        publishDir = [
-            path: { "${params.outdir}/align_new_ref" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{bam,txt}"
-        ]
-    }    
 
     withName: IVAR_CONSENSUS {
         publishDir = [
@@ -263,16 +265,16 @@ process {
         ]
     }    
 
-    withName: BWA_MEM_ALIGN_FINAL_CONSENSUS {
-        ext.prefix = { "${meta.id}_final_consensus" }
-        publishDir = [
-            path: { "${params.outdir}/align_final_consensus" },
-            mode: params.publish_dir_mode,
-            pattern: "*.{bam,txt}"
-        ]
-    }    
-
     /*
+    withName: MAKE_REFERENCE {
+        errorStrategy = 'ignore'
+        publishDir = [
+            path: { "${params.outdir}/make_reference" },
+            mode: params.publish_dir_mode,
+            pattern: "*.{fasta}"
+        ]
+    }
+
     withName: BOWTIE2_BUILD_NEW_REFERENCE {
         publishDir = [
             path: { "${params.outdir}/bowtie2_new_ref" },
@@ -345,7 +347,7 @@ process {
 			pattern: "summary_failed.tsv"
 		]
 	}    
-
+    /*
     withName: CUSTOM_DUMPSOFTWAREVERSIONS {
         publishDir = [
             path: { "${params.outdir}/pipeline_info" },
@@ -353,7 +355,7 @@ process {
             pattern: '*_versions.yml'
         ]
     }
-
+    */
 }
 
  
