--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,7 @@ params {
     genbank_ref                = null
     bowtie2_host_index         = null
     region_map                 = null
-    scrub_human                = false
+    kraken_host_db             = null
 
     // SPAdes
     spades_flag                = "meta"
