Small update to modules.config.

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -119,7 +119,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/indelrealigned/ref/addorreplacereadgroups" },
             mode: 'copy',
-            pattern: "*{rg.bam}"
+            pattern: "*{rg.bam,.bai}"
         ]        
     }    
 
@@ -150,7 +150,7 @@ process {
         publishDir = [
             path: { "${params.outdir}/indelrealigned/new_ref/addorreplacereadgroups" },
             mode: 'copy',
-            pattern: "*{rg.bam}"
+            pattern: "*{rg.bam,.bai}"
         ]        
     }    
 
